# diverse-seminar-2017-microservice

./: README.md  meson.build  org.gnome.Diverse-Seminar-2017-Microservice.json
src/: main.vala  meson.build
subprojects/: valum.wrap
